# ddns-route53

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  client-config-sample.toml
example/: ddns-route53.conf
example/systemd/: ddns-route53.service  ddns-route53.timer
src/: addresses.rs  aws_route53.rs  cli.rs  config.rs  host_names.rs  ip_algorithms.rs  main.rs  os_helpers.rs
