[package]
name = "ddns-route53"
description = "DDNS client for (AWS) Route53"
keywords = ["DDNS", "Route53"]
version = "0.1.0"
edition = "2021"
authors = ["john@jnelson.ca"]
license = "MIT OR Apache-2.0"

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-route53 = "1.47"
aws-types = "1.3"
clap = { version = "4.5", features = ["derive"] }
derivative = "2.2"
fern = "0.6"
futures = { version = "0.3" }
humantime = "2.1"
idna = "1.0"
netdev = "0.31"
igd-next = "0.15"
log = "0.4"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros","rt"] }
toml = "0.8"

[profile.release]
#strip = true  # Strip symbols from resulting binary
lto = true  # Enable link-time optimizations
codegen-units = 1  # Having >1 code-gen unit disables some possible optimizations
