[package]
name = "ddns-route53"
description = "DDNS client for (AWS) Route53"
keywords = ["DDNS", "Route53"]
version = "0.1.2"
edition = "2021"
authors = ["john@jnelson.ca"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/johnboy2/ddns-route53"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-route53 = "1"
aws-types = "1.3"
clap = { version = "4.5", features = ["derive","wrap_help"] }
derivative = "2.2"
encoding_rs = "0.8"
fern = "0.7"
humantime = "2.1"
idna = "1.0"
igd-next = "0.16"
log = "0.4"
mime = "0.3"
netdev = "0.34"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["http2","rustls-tls-native-roots","stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros","process","rt","time"] }
tokio-stream = "0.1"
toml = "0.8"

[profile.dev]
opt-level = 1  # Use only basic optimizations

[profile.release]
#strip = true  # Strip symbols from resulting binary
lto = true  # Enable link-time optimizations
codegen-units = 1  # Having >1 code-gen unit disables some possible optimizations
