[package]
name = "ddns-route53"
description = "DDNS client for (AWS) Route53"
keywords = ["DDNS", "Route53"]
version = "0.6.0"
edition = "2021"
authors = ["john@jnelson.ca"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/johnboy2/ddns-route53"
rust-version = "1.91.1"  # Required for AWS dependencies

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-route53 = "1"
aws-types = "1.3"
clap = { version = "4.5", features = ["derive","wrap_help"] }
encoding_rs = "0.8"
fern = "0.7"
humantime = "2.1"
idna = "1.1"
igd-next = "0.17"
log = "0.4"
mime = "0.3"
netdev = "0.42"
reqwest = { version = "0.13", default-features = false, features = ["http2","stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros","process","rt","time"] }
tokio-stream = "0.1"
toml = "1.1"
toml_edit = { version = "0.25", features = ["serde"] }


[features]
native-decode = ["dep:iconv-native"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
iconv-native = { version = "0.1", optional = true }


[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Globalization", "Win32_System_Com", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_UI_Shell"] }

# [target.'cfg(windows)'.dev-dependencies]
# windows-sys = { version = "0.61", features = ["Win32_Globalization", "Win32_System_Com", "Win32_System_Diagnostics", "Win32_UI_Shell"] }


[profile.dev]
opt-level = 1  # Use only basic optimizations

[profile.release]
#strip = true  # Strip symbols from resulting binary
lto = true  # Enable link-time optimizations
codegen-units = 1  # Having >1 code-gen unit disables some possible optimizations
